--- a/project.es.ipynb
+++ b/project.es.ipynb
@@ -1423,7 +1423,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": null,
       "id": "present-mistress",
       "metadata": {},
       "outputs": [
@@ -1467,7 +1467,7 @@
         "        coordenadas_dict[poblacion] = []\n",
         "    coordenadas_dict[poblacion].append((lat, lon))\n",
         "\n",
-        "# Crear un mapa centrado en el cinturón sur de Madrid\n",
+        "# IMPORTANTE!!!: No entiendo el porque pero esta ventana de codigo me ha dado problemas con la anterior por eso el import y el Map los he colocado en esta ventana.\n",
         "map = Map(center=(40.35, -3.8), zoom=11.5, min_zoom=1, max_zoom=20,\n",
         "          basemap=basemaps.OpenStreetMap.Mapnik)\n",
         "\n",
