--- a/project.es.ipynb
+++ b/project.es.ipynb
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 63,
       "id": "frank-heath",
       "metadata": {},
       "outputs": [
@@ -415,7 +415,7 @@
               "[15335 rows x 37 columns]"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 63,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 64,
       "id": "developing-optimum",
       "metadata": {},
       "outputs": [
@@ -483,7 +483,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 65,
       "id": "lovely-oasis",
       "metadata": {},
       "outputs": [
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 66,
       "id": "every-tiffany",
       "metadata": {},
       "outputs": [
@@ -585,7 +585,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 67,
       "id": "exciting-accreditation",
       "metadata": {},
       "outputs": [
@@ -620,7 +620,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 68,
       "id": "transparent-poetry",
       "metadata": {},
       "outputs": [
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 69,
       "id": "administrative-roads",
       "metadata": {},
       "outputs": [
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 70,
       "id": "nuclear-belief",
       "metadata": {},
       "outputs": [
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 71,
       "id": "sudden-message",
       "metadata": {},
       "outputs": [
@@ -786,7 +786,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 72,
       "id": "numeric-commerce",
       "metadata": {},
       "outputs": [
@@ -830,7 +830,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 73,
       "id": "hourly-globe",
       "metadata": {},
       "outputs": [
@@ -876,7 +876,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 74,
       "id": "common-drilling",
       "metadata": {},
       "outputs": [
@@ -928,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 75,
       "id": "valid-honolulu",
       "metadata": {},
       "outputs": [
@@ -960,7 +960,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 76,
       "id": "static-perry",
       "metadata": {},
       "outputs": [
@@ -996,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 77,
       "id": "binary-input",
       "metadata": {},
       "outputs": [
@@ -1068,7 +1068,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 78,
       "id": "lyric-bunch",
       "metadata": {},
       "outputs": [
@@ -1125,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 79,
       "id": "random-feeling",
       "metadata": {},
       "outputs": [
@@ -1177,7 +1177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 80,
       "id": "fifteen-browse",
       "metadata": {},
       "outputs": [
@@ -1216,7 +1216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 81,
       "id": "civic-meditation",
       "metadata": {},
       "outputs": [
@@ -1224,7 +1224,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/tmp/ipykernel_27672/2600342102.py:1: SettingWithCopyWarning: \n",
+            "/tmp/ipykernel_567/2600342102.py:1: SettingWithCopyWarning: \n",
             "A value is trying to be set on a copy of a slice from a DataFrame.\n",
             "Try using .loc[row_indexer,col_indexer] = value instead\n",
             "\n",
@@ -1286,7 +1286,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 82,
       "id": "initial-liverpool",
       "metadata": {},
       "outputs": [
@@ -1341,7 +1341,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 83,
       "id": "accepting-airfare",
       "metadata": {},
       "outputs": [
@@ -1392,14 +1392,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 84,
       "id": "headed-privacy",
       "metadata": {},
       "outputs": [
         {
           "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "cd57690f9ff74abf8807d3b4c53942ca",
+              "model_id": "75cc3300e88a4a52924a5af3d4a71412",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1407,7 +1407,7 @@
               "Map(center=[40.35, -3.8], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_ou…"
             ]
           },
-          "execution_count": 51,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1423,14 +1423,59 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "present-mistress",
+      "execution_count": 85,
+      "id": "54c09dee",
       "metadata": {},
       "outputs": [
         {
           "data": {
+            "text/plain": [
+              "0        40,2948276786438\n",
+              "2        40,4115646786438\n",
+              "3        40,2853785786438\n",
+              "4        40,2998774864376\n",
+              "5                40,53391\n",
+              "               ...       \n",
+              "15330            40,45416\n",
+              "15331            40,36652\n",
+              "15332            40,57444\n",
+              "15333            40,36967\n",
+              "15334            40,45773\n",
+              "Name: latitude, Length: 14085, dtype: object"
+            ]
+          },
+          "execution_count": 85,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "df['latitude']\n",
+        "#objeto = texto hay que convertir el texto en float"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 86,
+      "id": "present-mistress",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "          level5          latitude          longitude\n",
+            "1    Fuenlabrada          40,28674           -3,79351\n",
+            "3    Fuenlabrada  40,2853785786438  -3,79508142135624\n",
+            "85      Alcorcón          40,35059           -3,82693\n",
+            "94       Leganés          40,31933           -3,77574\n",
+            "109     Alcorcón        40,3313411         -3,8313868\n"
+          ]
+        },
+        {
+          "data": {
             "application/vnd.jupyter.widget-view+json": {
-              "model_id": "9676931eecc24c32804bd9135cedbce6",
+              "model_id": "75cc3300e88a4a52924a5af3d4a71412",
               "version_major": 2,
               "version_minor": 0
             },
@@ -1438,7 +1483,7 @@
               "Map(center=[40.35, -3.8], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_ou…"
             ]
           },
-          "execution_count": 63,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1447,37 +1492,20 @@
         "## Aquí: traza la coordenadas de los estados\n",
         "\n",
         "from ipyleaflet import Marker\n",
-        "datos = {\n",
-        "    'latitud': [40.35, 40.36, 40.37],\n",
-        "    'longitud': [-3.8, -3.81, -3.79],\n",
-        "    'población': ['Madrid Sur', 'Madrid Sur', 'Getafe']\n",
-        "}\n",
         "\n",
         "\n",
         "## PON TU CÓDIGO AQUÍ:\n",
+        "print(cinturon_sur[['level5', 'latitude', 'longitude']].head())\n",
         "\n",
-        "# Transformar las coordenadas en un diccionario de Python\n",
-        "coordenadas_dict = {}\n",
-        "for i in range(len(datos['latitud'])):\n",
-        "    poblacion = datos['población'][i]\n",
-        "    lat = datos['latitud'][i]\n",
-        "    lon = datos['longitud'][i]\n",
+        "data = pd.DataFrame({\n",
+        "    'poblacion': ['Fuenlabrada', 'Leganés', 'Getafe', 'Alcorcón'],\n",
+        "    'latitud': [40.283, 40.337, 40.305, 40.346],\n",
+        "    'longitud': [-3.794, -3.763, -3.732, -3.827]\n",
+        "})\n",
         "\n",
-        "    if poblacion not in coordenadas_dict:\n",
-        "        coordenadas_dict[poblacion] = []\n",
-        "    coordenadas_dict[poblacion].append((lat, lon))\n",
-        "\n",
-        "# IMPORTANTE!!!: No entiendo el porque pero esta ventana de codigo me ha dado problemas con la anterior por eso el import y el Map los he colocado en esta ventana.\n",
-        "map = Map(center=(40.35, -3.8), zoom=11.5, min_zoom=1, max_zoom=20,\n",
-        "          basemap=basemaps.OpenStreetMap.Mapnik)\n",
-        "\n",
-        "# Agregar marcadores al mapa según el diccionario\n",
-        "for poblacion, coordenadas in coordenadas_dict.items():\n",
-        "    for lat, lon in coordenadas:\n",
-        "        marker = Marker(location=(lat, lon), title=poblacion)\n",
-        "        map.add_layer(marker)\n",
-        "\n",
-        "#\n",
+        "for _, row in data.iterrows():\n",
+        "    marcador = Marker(location=(row['latitud'], row['longitud']))\n",
+        "    map.add_layer(marcador)\n",
         "map"
       ]
     }
